# simnation-desktop

./: package-lock.json
.github/workflows/: release.yml
radio/: .gitignore  package.json
radio/src-tauri/: simnation.key.pub  tauri.conf.json
radio/src-tauri/capabilities/: default.json  desktop.json
radio/src-tauri/src/: lib.rs
radio/src-tauri/~/.tauri/: simnation.key  simnation.key.pub
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
telemetry-hub/: package-lock.json  package.json
telemetry-hub/src/: App.vue
telemetry-hub/src-tauri/: Cargo.toml  build.rs  simnation.key  tauri.conf.json
telemetry-hub/src-tauri/capabilities/: default.json
telemetry-hub/src-tauri/src/: lib.rs  main.rs
