[package]
name = "simnation-desktop"
version = "0.1.0"
description = "SimNation Radio: The Ultimate Command Center"
authors = ["SimNation Dev Team"]
edition = "2021"

[lib]
name = "simnation_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 🛡️ CORE TAURI 2.0
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.0"

# 📦 DATA & SERIALIZATION
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 🚛 SIM-SPECIFIC (THE PRO STACK)
# This reads the memory-mapped file from ETS2/ATS
scs-sdk-telemetry = "0.1.1" 

# 🎮 SOCIAL & HARDWARE
# Official Discord Rich Presence support
discord-rich-presence = "0.2.4" 

# 🔧 SYSTEM TOOLS (FOR THE ONE-CLICK INSTALLER)
# Used to find Steam & Game paths in the Windows Registry
winreg = "0.52" 
# cross-platform directory handling
directories = "6.0" 
# Advanced file operations for moving the DLL into the game folder
fs_extra = "1.3" 

# 📈 PERFORMANCE & MONITORING
sysinfo = "0.38.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
