[package]
name = "simnation-desktop"
version = "0.2.1"
description = "SimNation Radio: The Ultimate Command Center"
authors = ["SimNation Dev Team"]
edition = "2021"

[lib]
name = "simnation_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# 🛡️ CORE TAURI 2.0 
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-notification = "2"
tauri-plugin-global-shortcut = "2.3.1"
tauri-plugin-window-state = "2.4.1"
tauri-plugin-updater = "2.10.0"

# 📦 DATA & SERIALIZATION
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# 🚛 SIM-SPECIFIC (THE STABLE STACK)
# 🛡️ CRITICAL FIX: The "json" feature MUST be enabled for the dynamic parser to work!
scs-sdk-telemetry = { version = "1.2.0", features = ["json"] }

# 🎮 SOCIAL & HARDWARE
discord-rich-presence = "0.2.4" 

# 🔧 SYSTEM TOOLS
winreg = "0.52" 
directories = "6.0" 
fs_extra = "1.3" 
sysinfo = "0.38.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
